@startuml Matchday Match Events Domain
title Matchday V5 - Eventos del partido

hide empty members
skinparam classAttributeIconSize 0
skinparam linetype ortho

class Match
class Player

abstract class TimedMatchEvent {
  +UUID id
  +UUID match_id
  +TeamSide team_side
  +MatchPeriod period
  +int minute
  +int added_minute
}

class Goal {
  +UUID player_id
  +UUID assist_player_id
  +GoalType goal_type
  +datetime disallowed_at
}
class Card {
  +UUID player_id
  +CardType card_type
  +datetime rescinded_at
}
class MatchSubstitution {
  +UUID player_out_id
  +UUID player_in_id
  +SubstitutionReason reason
}
class PenaltyAttempt {
  +UUID player_id
  +PenaltyAttemptOutcome outcome
}
class Shot {
  +UUID player_id
  +UUID goalkeeper_id
  +ShotOutcome outcome
}
class Injury { +UUID player_id }
class Foul { +UUID player_id }
class CornerKick { +UUID player_id }
class Offside { +UUID player_id }
class VarReview {
  +VarReviewReason reason
  +VarReviewDecision decision
  +UUID reviewed_event_id
}

Goal --|> TimedMatchEvent
Card --|> TimedMatchEvent
MatchSubstitution --|> TimedMatchEvent
PenaltyAttempt --|> TimedMatchEvent
Shot --|> TimedMatchEvent
Injury --|> TimedMatchEvent
Foul --|> TimedMatchEvent
CornerKick --|> TimedMatchEvent
Offside --|> TimedMatchEvent
VarReview --|> TimedMatchEvent
Match "1" *-- "0..*" TimedMatchEvent
Player "1" <-- "0..*" TimedMatchEvent

note bottom of TimedMatchEvent
  La herencia es conceptual para el diagrama.
  Cada tipo tiene su propia tabla y todos se
  proyectan en una cronología de lectura única.
end note
@enduml
